--- a/admin/view/html/catalog/club_form.html
+++ b/admin/view/html/catalog/club_form.html
@@ -91,7 +91,28 @@
                                     <?php endif; ?>
                                 </div>
                             </div>
+                            
+                            <div class="form-group row">
+                                <label for="input-austin-governor" class="col-sm-2 col-form-label">
+                                    <?php echo $entry_austin_governor; ?></label>
 
+                                <div class="col-sm-10">
+                                    <select name="austin_governor_id" class="form-control" id="input-austin-governor">
+                                        <?php foreach($austin_governors as $austin_governor) : ?>
+                                        <?php if($austin_governor['austin_governor_id'] == $austin_governor_id) : ?>
+                                        <option value="<?php echo $austin_governor['austin_governor_id']; ?>" selected="selected">
+                                            <?php echo $austin_governor['name']; ?>
+                                        </option>
+                                        <?php else : ?>
+                                        <option value="<?php echo $austin_governor['austin_governor_id']; ?>">
+                                            <?php echo $austin_governor['name']; ?>
+                                        </option>
+                                        <?php endif; ?>
+                                        <?php endforeach; ?>
+                                    </select>
+                                </div>
+                            </div>
+                            
                             <div class="form-group row required">
                                 <label for="input-name" class="col-sm-2 col-form-label">
                                     <?php echo $entry_name; ?></label>
